docs(packaging): 按 v1.0.4 最终正确结果重写发布流程与打包文档（薄jar+WuZhuApplication+jlink runtime+--add-modules+includeScope=runtime）