@@ -2,195 +2,100 @@
 
 本文档记录 WuZhu 应用在 Windows 11 下的完整打包流程。
 
-## 前置要求
+> ⚠️ **历史遗留文档已重写**：本文档早期描述“fat jar + app-image 两步法”，已被证明会导致 `failed to launch JVM`。
+> **当前正确流程请以 [PACKAGING_WINDOWS.md](./PACKAGING_WINDOWS.md) 和仓库内的 `package-windows.ps1` 为准**，本页只做速览与排错。
 
-- JDK 21 with JavaFX (推荐 BellSoft Liberica)
-- WiX Toolset 3.x (用于生成 MSI/EXE 安装程序)
-- Maven 3.8+
+## 正确做法（一句话）
 
-## 打包流程（两步法）
-
-### 步骤 1：编译项目
-
-```bash
-# 清理并编译
-./mvnw.cmd clean package -DskipTests
-```
-
-确认 `target/WuZhu-1.0.jar` 已生成，且能用以下命令运行：
-
-```bash
-java -jar target/WuZhu-1.0.jar
-```
-
-### 步骤 2：生成应用程序镜像 (app-image)
-
-**重要**：使用干净的输入目录，只包含 fat jar
-
-```bash
-# 创建干净的输入目录
-mkdir -p dist/input
-cp target/WuZhu-1.0.jar dist/input/
-
-# 生成 app-image
-jpackage --type app-image \
-  --name wuzhu \
-  --input dist/input \
-  --main-jar WuZhu-1.0.jar \
-  --icon src/main/resources/org/lifxue/wuzhu/images/wuzhu-96.ico \
-  --dest dist
-```
-
-生成的 app-image 位于 `dist/wuzhu/`，包含：
-
-- `wuzhu.exe` - 启动程序
-- `app/WuZhu-1.0.jar` - Spring Boot fat jar
-- `runtime/` - 内置 JRE
-
-**验证**：测试 exe 是否能正常运行
-
-```bash
-cd dist/wuzhu
-./wuzhu.exe
-```
-
-### 步骤 3：生成 MSI 安装程序
-
-```bash
-# 需要 WiX Toolset 在 PATH 中
-export PATH="$PATH:/c/Program Files (x86)/WiX Toolset v3.14/bin"
-
-jpackage --type msi \
-  --win-dir-chooser \
-  --win-menu \
-  --win-per-user-install \
-  --win-shortcut \
-  --icon src/main/resources/org/lifxue/wuzhu/images/wuzhu-96.ico \
-  --name WuZhu \
-  --app-version 1.0.0 \
-  --vendor "lifxue" \
-  --description "WuZhu - 加密货币交易记录和分析工具" \
-  --copyright "Copyright 2023-2025 lifxue" \
-  --app-image dist/wuzhu \
-  --dest install
-```
-
-输出：`install/WuZhu-1.0.0.msi`
-
-### 步骤 4（可选）：生成 EXE 安装程序
-
-```bash
-jpackage --type exe \
-  --win-dir-chooser \
-  --win-menu \
-  --win-per-user-install \
-  --win-shortcut \
-  --icon src/main/resources/org/lifxue/wuzhu/images/wuzhu-96.ico \
-  --name WuZhu \
-  --app-version 1.0.0 \
-  --vendor "lifxue" \
-  --description "WuZhu - 加密货币交易记录和分析工具" \
-  --copyright "Copyright 2023-2025 lifxue" \
-  --app-image dist/wuzhu \
-  --dest install
-```
-
-输出：`install/WuZhu-1.0.0.exe`
-
-## 完整一键打包脚本
-
-使用项目自带的 PowerShell 脚本：
+用仓库自带的 PowerShell 脚本（与 GitHub Actions 完全一致），**不要**手动拼 jpackage 参数：
 
 ```powershell
-# 以管理员身份运行 PowerShell
-.\packaging\package-windows.ps1
+# 以管理员身份运行 PowerShell，在仓库根目录
+.\packaging\package-windows.ps1 -AppVersion 1.0.5
 ```
 
-或手动执行完整流程：
+该脚本内部已完成所有“避免 `failed to launch JVM`”的关键处理：
+
+| 关键点 | 做法 |
+|---|---|
+| 主 jar | 用 **薄 jar**（`target\WuZhu-1.0.jar.original`）复制为 `target\dependency\WuZhu-1.0.jar` |
+| main-class | `org.lifxue.wuzhu.WuZhuApplication` |
+| 内置 runtime | `jlink` 自建 `target\custom-jre`（含 `bin\java.exe`），`--runtime-image` 指定 |
+| JavaFX 模块 | `--java-options "--add-modules" "javafx.base,...,javafx.swing"` |
+| 依赖 scope | `-DincludeScope=runtime`（含 h2 驱动），排除 devtools/configuration-processor |
+
+## 环境要求
+
+- JDK 21 with JavaFX（推荐 BellSoft Liberica，CI 用 `java-package: jdk+fx`）
+- WiX Toolset 3.x（`choco install wixtoolset -y`）
+- Maven（`./mvnw`）
+
+## 手动打包（不推荐，仅调试用）
+
+> 以下命令仅用于**理解**打包参数，日常发布请用脚本或 GitHub Actions（见 [DEVELOPMENT_RELEASE.md](../docs/DEVELOPMENT_RELEASE.md) §2.2）。
 
 ```bash
-#!/bin/bash
-# build-windows.sh - Windows 打包脚本
-
-set -e
-
-echo "=== 步骤 1: 编译项目 ==="
+# 1. 编译
 ./mvnw.cmd clean package -DskipTests -q
 
-echo "=== 步骤 2: 生成 app-image ==="
-rm -rf dist
-mkdir -p dist/input
-cp target/WuZhu-1.0.jar dist/input/
+# 2. 复制依赖（-D 参数必须加引号！）
+./mvnw.cmd dependency:copy-dependencies "-DincludeScope=runtime" "-DexcludeGroupIds=org.openjfx" "-DexcludeArtifactIds=spring-boot-devtools,spring-boot-configuration-processor" -q
+Copy-Item target\WuZhu-1.0.jar.original target\dependency\WuZhu-1.0.jar
 
-jpackage --type app-image \
-  --name wuzhu \
-  --input dist/input \
-  --main-jar WuZhu-1.0.jar \
-  --icon src/main/resources/org/lifxue/wuzhu/images/wuzhu-96.ico \
-  --dest dist
+# 3. jlink 自建 runtime（含 java.exe 启动器）
+jlink --module-path "$env:JAVA_HOME\jmods" `
+  --add-modules java.base,java.logging,java.xml,java.sql,java.desktop,java.management,java.naming,java.security.jgss,java.instrument,jdk.unsupported,javafx.base,javafx.graphics,javafx.controls,javafx.fxml,javafx.web,javafx.media,javafx.swing,jdk.localedata `
+  --output target\custom-jre --strip-debug --no-man-pages --no-header-files --compress=2
 
-echo "=== 步骤 3: 生成 MSI 安装程序 ==="
-export PATH="$PATH:/c/Program Files (x86)/WiX Toolset v3.14/bin"
-rm -rf install
-mkdir install
-
-jpackage --type msi \
-  --win-dir-chooser --win-menu --win-per-user-install --win-shortcut \
-  --icon src/main/resources/org/lifxue/wuzhu/images/wuzhu-96.ico \
-  --name WuZhu --app-version 1.0.0 \
-  --vendor "lifxue" \
-  --description "WuZhu - 加密货币交易记录和分析工具" \
-  --copyright "Copyright 2023-2025 lifxue" \
-  --app-image dist/wuzhu \
-  --dest install
-
-echo "=== 打包完成 ==="
-ls -lh install/
+# 4. jpackage 打 MSI
+jpackage --type msi --name WuZhu --app-version 1.0.5 --vendor "lifxue" `
+  --main-jar WuZhu-1.0.jar --main-class org.lifxue.wuzhu.WuZhuApplication `
+  --input target\dependency --dest target\dist --runtime-image target\custom-jre `
+  --icon src\main\resources\org\lifxue\wuzhu\images\wuzhu-96.ico `
+  --win-menu --win-menu-group WuZhu --win-shortcut --win-dir-chooser --win-per-user-install `
+  --java-options "-Dfile.encoding=UTF-8" `
+  --java-options "--add-modules" `
+  --java-options "javafx.base,javafx.graphics,javafx.controls,javafx.fxml,javafx.web,javafx.media,javafx.swing"
 ```
+
+输出：`target\dist\WuZhu-1.0.5.msi`
 
 ## 常见问题
 
-### 1. 安装后的 exe 无法运行
+### 1. 安装后的 WuZhu.exe 弹窗 `failed to launch JVM`
 
-**原因**：直接使用 `--input target/dependency` 导致依赖分离，exe 无法正确加载。
+按历史排障，共 3 个根因（均已修复并固化在脚本中）：
 
-**解决**：使用两步法，先生成 app-image，再用 app-image 生成安装程序。
+| 根因 | 检查 | 对应修复 |
+|---|---|---|
+| 用了 fat jar | `app\WuZhu-1.0.jar` 有 `BOOT-INF/`，体积 >10MB | 用薄 jar `WuZhu-1.0.jar.original`（~5MB） |
+| runtime 缺 `java.exe` | `runtime\bin\java.exe` 不存在 | 用 `jlink` 自建 runtime + `--runtime-image` |
+| 缺 h2 驱动 | 启动后报 `Cannot load driver class: org.h2.Driver` | `-DincludeScope=runtime` 复制依赖 |
 
-### 2. "WiX tools not found"
+> 诊断技巧：直接调用内置 JVM 拿真实报错，而非只看弹窗（详见 [DEVELOPMENT_RELEASE.md](../docs/DEVELOPMENT_RELEASE.md) §4.1）。
 
-**解决**：
+### 2. `WiX tools not found` / `candle` 找不到
 
-```bash
-# 添加到 PATH
-export PATH="$PATH:/c/Program Files (x86)/WiX Toolset v3.14/bin"
+**解决**：安装 WiX Toolset 3.x 并加入 PATH，或直接用脚本（CI 中 `choco install wixtoolset -y`）。
 
-# 验证
-candle -?
-```
+### 3. PowerShell 调 mvnw.cmd 报 `Unknown lifecycle phase .openjfx`
 
-### 3. 生成的安装包太大
+**解决**：`-D` 参数必须加引号：`"-DexcludeGroupIds=org.openjfx"`（详见 [DEVELOPMENT_RELEASE.md](../docs/DEVELOPMENT_RELEASE.md) §3.2）。
 
-- MSI/EXE: ~150MB（包含完整 JRE）
-- 如需减小体积，考虑使用模块化 JRE（jlink）
+### 4. 生成的安装包太大
 
-### 4. 图标不显示
-
-确保图标路径正确：
-
-```bash
-ls src/main/resources/org/lifxue/wuzhu/images/wuzhu-96.ico
-```
+- MSI 约 100+MB（包含 jlink 精简 runtime + JavaFX）。
+- 已经用 jlink 精简过；如需进一步缩小可裁剪 `jdk.localedata`（不推荐，影响多语言）。
 
 ## 安装包信息
 
-| 格式  | 文件                        | 大小     | 特点           |
-| --- | ------------------------- | ------ | ------------ |
-| MSI | `install/WuZhu-1.0.0.msi` | ~150MB | 标准安装包，企业部署友好 |
-| EXE | `install/WuZhu-1.0.0.exe` | ~150MB | 单文件，用户体验好    |
-| 便携版 | `dist/wuzhu/`             | ~150MB | 无需安装，解压即用    |
+| 格式 | 文件 | 说明 |
+|---|---|---|
+| MSI | `target\dist\WuZhu-1.0.5.msi` | 标准安装包（per-user），CI 自动发布 |
 
 ## 相关文档
 
-- [Windows 打包详细指南](./PACKAGING_WINDOWS.md)
+- [Windows 打包详细指南（权威）](./PACKAGING_WINDOWS.md)
 - [Ubuntu 打包指南](./PACKAGING_UBUNTU.md)
+- [开发与发布流程（权威，含发布步骤）](../docs/DEVELOPMENT_RELEASE.md)
 - [开发环境搭建](./DEVELOPMENT.md)
